--- a/tooldemo/src/main/res/values/strings.xml
+++ b/tooldemo/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ToolDemo</string>
     <string name="base_adapter">GridView ListView通用适配器</string>
+    <string name="recycle_view_adapter">RecyclerView通用适配器</string>
     <string name="refresh">刷新</string>
 </resources>
