--- a/tooldemo/src/main/res/values/strings.xml
+++ b/tooldemo/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="base_adapter">GridView ListView通用适配器</string>
     <string name="recycle_view_adapter">RecyclerView通用适配器</string>
     <string name="refresh">刷新</string>
+
+    <string name="all_apps">所有应用</string>
+    <string name="system_apps">系统应用</string>
+    <string name="user_apps">第三方应用</string>
 </resources>
