添加Gridview、Listview多布局通用适配器

--- a/tooldemo/src/main/res/values/strings.xml
+++ b/tooldemo/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">ToolDemo</string>
     <string name="base_adapter">GridView ListView通用适配器</string>
     <string name="recycle_view_adapter">RecyclerView通用适配器</string>
+    <string name="multi_item_adapter">GridView ListView多布局通用适配器</string>
     <string name="refresh">刷新</string>
 
     <string name="all_apps">所有应用</string>
