新增ViewPager通用适配器以及示例

--- a/tooldemo/src/main/res/values/strings.xml
+++ b/tooldemo/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="recycle_view_adapter">RecyclerView通用适配器</string>
     <string name="multi_item_adapter">GridView ListView多布局通用适配器</string>
     <string name="multi_item_recycler_adapter">RecyclerView多布局通用适配器</string>
+    <string name="viewpager_adapter">ViewPager通用适配器</string>
     <string name="refresh">刷新</string>
 
     <string name="all_apps">所有应用</string>
