获取所有应用包

--- a/tooldemo/src/main/res/values/strings.xml
+++ b/tooldemo/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="system_apps">系统应用</string>
     <string name="user_apps">第三方应用</string>
     <string name="running_apps">正在运行应用</string>
+    <string name="all_packages">所有应用包</string>
 </resources>
